--- a/css-folders/style.css
+++ b/css-folders/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
+
+
 body, h1, h2, p, ul, li {
     margin: 0;
     padding: 0;
@@ -5,7 +8,7 @@ body, h1, h2, p, ul, li {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f9;
@@ -21,6 +24,7 @@ header {
 }
 
 header h1 {
+    font-family: 'Raleway', sans-serif;
     margin: 0;
     margin-left: 10px;
     font-size: 1.8rem;
@@ -44,6 +48,7 @@ nav ul {
 
 
 .site-title {
+    font-family: 'Raleway', sans-serif;
     margin-left: 10px;
     font-size: 1.6rem;
     color: #fff;
@@ -72,6 +77,7 @@ nav ul li a:hover {
 }
 
 .search-bar {
+    font-family: 'Raleway', sans-serif;
     width: 300px; 
     height: 20px; 
     padding: 0.5rem; 
@@ -146,6 +152,7 @@ nav ul li a:hover {
 
 /* login button styles */
 .nav-login-button {
+    font-family: 'Raleway', sans-serif;
     text-decoration: none;
     color: #fff;
     background-color: grey; 
@@ -278,6 +285,7 @@ nav ul li a:hover {
 }
 
 .card {
+    font-family: 'Raleway', sans-serif;
     background: #fff;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -292,10 +300,12 @@ nav ul li a:hover {
 }
 
 .card img {
-    max-width: 50%;
+    max-width: 100%;
+    height: 200px;
     border-radius: 8px;
     margin-bottom: 10px;
     align-self: center; 
+    object-fit: cover;
 }
 
 .card .buy-now {
