Added register button for all html except login and register, added Raleway font from google fonts, bolded some words

--- a/css-folders/login-style.css
+++ b/css-folders/login-style.css
@@ -26,6 +26,12 @@ body {
     color: #333;
 }
 
+
+label {
+    font-size: 1.2rem;
+    color: #333;
+}
+
 .container .form input {
     width: 100%;
     padding: 0.8rem;
