--- a/css-folders/style.css
+++ b/css-folders/style.css
@@ -21,6 +21,7 @@ header {
     padding: 1rem;
     display: flex;
     align-items: center;  
+    font-weight: bold;
 }
 
 header h1 {
@@ -151,7 +152,7 @@ nav ul li a:hover {
 
 
 /* login button styles */
-.nav-login-button {
+.nav-login-button, .nav-register-button {
     font-family: 'Raleway', sans-serif;
     text-decoration: none;
     color: #fff;
@@ -294,6 +295,7 @@ nav ul li a:hover {
     text-align: center;
     transition: transform 0.2s;
     font-size: 0.9rem;
+    font-weight:bold;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
