--- a/css-folders/style.css
+++ b/css-folders/style.css
@@ -317,3 +317,59 @@ nav ul li a:hover {
 .card:hover {
     transform: translateY(-5px);
 }
+
+/* for settings.html */
+.profile-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh; 
+}
+
+.profile-container {
+    background-color: #d3d3d3;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+    height: 400px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.section-title {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.profile-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.profile-container
+{
+    background-color: #d3d3d3;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+    height: auto; 
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    text-align: left;
+}
+
+.profile-container h2 {
+    align-self: flex-start;
+    margin-bottom: 10px;
+}
+
+.button-for-login
+{
+    display:flex;
+    align-items: right;
+    justify-content: right;
+}
