--- a/css-folders/login-style.css
+++ b/css-folders/login-style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #ECF0F1;
     display: flex;
     justify-content: center;
     align-items: center;
