--- a/css-folders/profile-style.css
+++ b/css-folders/profile-style.css
@@ -11,12 +11,12 @@ body {
     font-family: 'Raleway', sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #f4f4f9;
+    background-color: #ECF0F1;
 }
 
 /* header and navbar */
 header {
-    background: #333;
+    background: #2C3E50;
     color: #fff;
     padding: 1rem;
     display: flex;
@@ -66,6 +66,8 @@ nav ul li a {
 
 nav ul li a:hover {
     background: #555;
+    text-decoration: none;
+    color: #ccc;
 }
 
 .center-content {
@@ -221,7 +223,7 @@ nav ul li a:hover {
     left: -250px;
     width: 250px;
     height: 100%;
-    background: #444;
+    background: #2C3E50;
     color: #fff;
     transition: left 0.3s ease;
     padding-left: 1rem;
