--- a/css-folders/wishlist.css
+++ b/css-folders/wishlist.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
 
-
 body, h1, h2, p, ul, li {
     margin: 0;
     padding: 0;
@@ -11,12 +10,12 @@ body {
     font-family: 'Raleway', sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #f4f4f9;
+    background-color: #ECF0F1;
 }
 
 /* header and navbar */
 header {
-    background: #333;
+    background: #2C3E50;
     color: #fff;
     padding: 1rem;
     display: flex;
@@ -67,6 +66,8 @@ nav ul li a {
 
 nav ul li a:hover {
     background: #555;
+    text-decoration: none;
+    color: #ccc;
 }
 
 .center-content {
@@ -222,7 +223,7 @@ nav ul li a:hover {
     left: -250px;
     width: 250px;
     height: 100%;
-    background: #444;
+    background: #2C3E50;
     color: #fff;
     transition: left 0.3s ease;
     padding-left: 1rem;
@@ -263,7 +264,8 @@ nav ul li a:hover {
 
 .cart-wrap {
 	padding: 40px 0;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Raleway', sans-serif;
+    background-color: #ECF0F1;
 }
 
 .main-heading {
