--- a/css-folders/product.css
+++ b/css-folders/product.css
@@ -19,7 +19,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 1000;
-    background: #2c3e50;
+    background: #2C3E50;
     color: #fff;
     padding: 1rem;
     display: flex;
@@ -185,25 +185,6 @@ nav ul li a:hover {
     background-color: #e60000; 
 }
 
-
-/* carousel */
-.carousel {
-    position: relative;
-    width: 80%;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.carousel-image {
-    display: none;
-    width: 100%;
-    border-radius: 10px;
-}
-
-.carousel-image:first-child {
-    display: block;
-}
-
 .notification-container {
     position: relative;
 }
@@ -284,105 +265,163 @@ nav ul li a:hover {
     left: 0;
 }
 
-/* categories and for you */
-.content-grid {
-    margin-top: 2rem;
-    text-align: center;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr); 
-    gap: 1rem;
-    padding: 1rem;
-    justify-content: center;
-}
-
-.card {
-    font-family: 'Raleway', sans-serif;
-    background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-    text-align: center;
-    transition: transform 0.2s;
-    font-size: 0.9rem;
-    font-weight:bold;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.card img {
-    max-width: 100%;
-    height: 200px;
-    border-radius: 8px;
-    margin-bottom: 10px;
-    align-self: center; 
-    object-fit: cover;
-}
-
-.card .buy-now {
-    margin-top: auto; 
-}
-
-.card:hover {
-    transform: translateY(-5px);
-}
-
-/* for settings.html */
-.profile-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90vh; 
-}
-
-.profile-container {
-    background-color: #d3d3d3;
-    padding: 20px;
-    border-radius: 10px;
-    width: 400px;
-    height: 400px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.section-title {
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.profile-form {
-    display: flex;
-    flex-direction: column;
+/* Basic Styling */
+html, body {
+    height: 100%;
     width: 100%;
-    margin-bottom: 30px;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
-
-.profile-container
-{
-    background-color: #d3d3d3;
-    padding: 20px;
-    border-radius: 10px;
-    width: 400px;
-    height: auto; 
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+   
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    text-align: left;
 }
 
-.profile-container h2 {
-    align-self: flex-start;
-    margin-bottom: 10px;
+/* Columns */
+.left-column {
+    width: 65%;
+    position: relative;
+}
+   
+.right-column {
+    width: 35%;
+    margin-top: 60px;
 }
 
-.button-for-login
-{
-    display:flex;
-    align-items: right;
-    justify-content: right;
+/* Left Column */
+.left-column img {
+    width: 100%;
+    position: absolute;
+    right: 50px;
+    top: 0;
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+   
+.left-column img.active {
+    opacity: 1;
+}
+
+  /* Product Description */
+.product-description {
+  border-bottom: 1px solid #E1E8EE;
+  margin-bottom: 20px;
+}
+.product-description span {
+  font-size: 12px;
+  color: #358ED7;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.product-description h1 {
+  font-weight: 300;
+  font-size: 52px;
+  color: #43484D;
+  letter-spacing: -2px;
+}
+.product-description p {
+  font-size: 16px;
+  font-weight: 300;
+  color: #86939E;
+  line-height: 24px;
+}
+
+/* Product Color */
+.product-color {
+  margin-bottom: 30px;
+}
+ 
+
+.color-choose input[type="radio"] + label span {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin: -1px 4px 0 0;
+  vertical-align: middle;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 2px solid #FFFFFF;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
+}
+ 
+
+/* Cable Configuration */
+.cable-choose {
+  margin-bottom: 20px;
+}
+ 
+.cable-choose button {
+  border: 2px solid #E1E8EE;
+  border-radius: 6px;
+  padding: 13px 20px;
+  font-size: 14px;
+  color: #5E6977;
+  background-color: #fff;
+  cursor: pointer;
+  transition: all .5s;
+}
+ 
+.cable-choose button:hover,
+.cable-choose button:active,
+.cable-choose button:focus {
+  border: 2px solid #86939E;
+  outline: none;
+}
+ 
+.cable-config {
+  border-bottom: 1px solid #E1E8EE;
+  margin-bottom: 20px;
+}
+ 
+.cable-config a {
+  color: #358ED7;
+  text-decoration: none;
+  font-size: 12px;
+  position: relative;
+  margin: 10px 0;
+  display: inline-block;
+}
+ 
+.cable-config a:before {
+  content: "?";
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  border: 2px solid rgba(53, 142, 215, 0.5);
+  display: inline-block;
+  text-align: center;
+  line-height: 16px;
+  opacity: 0.5;
+  margin-right: 5px;
+}
+
+/* Product Price */
+.product-price {
+  display: flex;
+  align-items: center;
+}
+ 
+.product-price span {
+  font-size: 26px;
+  font-weight: 300;
+  color: #43474D;
+  margin-right: 20px;
+}
+ 
+.cart-btn {
+  display: inline-block;
+  background-color: #7DC855;
+  border-radius: 6px;
+  font-size: 16px;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding: 12px 30px;
+  transition: all .5s;
+}
+.cart-btn:hover {
+  background-color: #64af3d;
 }
