--- a/css-folders/wishlist.css
+++ b/css-folders/wishlist.css
@@ -21,6 +21,9 @@ body {
 
 /* header and navbar */
 header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     background: #2C3E50;
     color: #fff;
     padding: 1rem;
