--- a/css-folders/messages.css
+++ b/css-folders/messages.css
@@ -187,25 +187,6 @@ nav ul li a:hover {
     background-color: #e60000; 
 }
 
-
-/* carousel */
-.carousel {
-    position: relative;
-    width: 80%;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-.carousel-image {
-    display: none;
-    width: 100%;
-    border-radius: 10px;
-}
-
-.carousel-image:first-child {
-    display: block;
-}
-
 .notification-container {
     position: relative;
 }
@@ -286,114 +267,48 @@ nav ul li a:hover {
     left: 0;
 }
 
-/* categories and for you */
-.content-grid {
-    margin-top: 2rem;
-    text-align: center;
+body{margin-top:20px;}
+
+.chat-online {
+    color: #34ce57
 }
 
-.grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr); 
-    gap: 1rem;
-    padding: 1rem;
-    justify-content: center;
+.chat-offline {
+    color: #e4606d
 }
 
-.card {
-    font-family: 'Raleway', sans-serif;
-    background: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-    text-align: center;
-    transition: transform 0.2s;
-    font-size: 0.9rem;
-    font-weight:bold;
+.chat-messages {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    max-height: 800px;
+    overflow-y: scroll
 }
 
-.card img {
-    max-width: 100%;
-    height: 200px;
-    border-radius: 8px;
-    margin-bottom: 10px;
-    align-self: center; 
-    object-fit: cover;
-}
-
-.card .buy-now {
-    margin-top: auto; 
-}
-
-.card:hover {
-    transform: translateY(-5px);
-}
-
-/* for settings.html */
-.profile-wrapper {
+.chat-message-left,
+.chat-message-right {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90vh; 
+    flex-shrink: 0
 }
 
-.profile-container {
-    background-color: #d3d3d3;
-    padding: 20px;
-    border-radius: 10px;
-    width: 400px;
-    height: 400px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+.chat-message-left {
+    margin-right: auto
 }
 
-.section-title {
-    font-weight: bold;
-    margin-bottom: 10px;
+.chat-message-right {
+    flex-direction: row-reverse;
+    margin-left: auto
 }
-
-.profile-form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-bottom: 30px;
+.py-3 {
+    padding-top: 1rem!important;
+    padding-bottom: 1rem!important;
 }
-
-.profile-container
-{
-    background-color: #d3d3d3;
-    padding: 20px;
-    border-radius: 10px;
-    width: 400px;
-    height: auto; 
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    text-align: left;
+.px-4 {
+    padding-right: 1.5rem!important;
+    padding-left: 1.5rem!important;
 }
-
-.profile-container h2 {
-    align-self: flex-start;
-    margin-bottom: 10px;
+.flex-grow-0 {
+    flex-grow: 0!important;
 }
-
-.button-for-login
-{
-    display:flex;
-    align-items: right;
-    justify-content: right;
-}
-
-.icon-hover:hover {
-  border-color: #3b71ca !important;
-  background-color: white !important;
-}
-
-.icon-hover:hover i {
-  color: #3b71ca !important;
+.border-top {
+    border-top: 1px solid #dee2e6!important;
 }
