--- a/css-folders/product.css
+++ b/css-folders/product.css
@@ -16,6 +16,7 @@ body {
 
 /* header and navbar */
 header {
+    font-family: 'Raleway', sans-serif;
     width:100%;
     position: sticky;
     top: 0;
@@ -320,7 +321,7 @@ html, body {
 }
 .product-description h1 {
   font-weight: 300;
-  font-size: 52px;
+  font-size: 33px;
   color: #43484D;
   letter-spacing: -2px;
 }
