--- a/css-folders/login.css
+++ b/css-folders/login.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
+
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     background-color: #ECF0F1;
     display: flex;
     justify-content: center;
@@ -35,11 +37,12 @@ label {
 .container .form input {
     width: 100%;
     padding: 0.8rem;
-    margin: 0.5rem 0;
+    margin: 0.5rem auto;
     border: none;
     border-radius: 15px;
     background-color: #d4d4d4;
     font-size: 1rem;
+    box-sizing: border-box;
 }
 
 .container .form input:focus {
