--- a/css-folders/addlisting.css
+++ b/css-folders/addlisting.css
@@ -45,6 +45,7 @@
     background-color: #28a745;
     color: white;
     border: none;
+    margin-top: 20px;
     padding: 10px;
     cursor: pointer;
     font-size: 16px;
