--- a/css-folders/style.css
+++ b/css-folders/style.css
@@ -397,3 +397,39 @@ nav ul li a:hover {
 .icon-hover:hover i {
   color: #3b71ca !important;
 }
+
+footer {
+    background: #2c3e50;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    font-size: 14px;
+    margin-top: 50px;
+}
+
+footer p {
+    margin: 10px 0;
+}
+
+footer a {
+    color: #f5a623;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer p:last-child {
+    font-size: 12px;
+    color: #bbb;
+}
+
+footer p a {
+    color: #f5a623;
+    font-weight: bold;
+}
+
+footer p a:hover {
+    color: #ff7300;
+}
