--- a/css-folders/style.css
+++ b/css-folders/style.css
@@ -433,3 +433,35 @@ footer p a {
 footer p a:hover {
     color: #ff7300;
 }
+
+/* Profile Picture Container */
+.profile-picture {
+    position: relative; /* Added to position elements inside this container */
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-color: #ddd;
+    margin-right: 20px;
+    overflow: hidden;
+}
+
+.profile-picture .profile-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profile-upload-btn {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    font-size: 16px;
+    display: block;
+}
+
+.profile-upload-btn::-webkit-file-upload-button {
+    display: none; 
+}
