Added comments for external code

--- a/css-folders/cart.css
+++ b/css-folders/cart.css
@@ -262,6 +262,8 @@ nav ul li a:hover {
     left: 0;
 }
 
+
+/* Shopping cart page : https://mdbootstrap.com/docs/standard/extended/shopping-carts/ */
 .card img {
     max-width: 100%;
     border-radius: 8px;
