--- a/css-folders/messages.css
+++ b/css-folders/messages.css
@@ -267,6 +267,8 @@ nav ul li a:hover {
     left: 0;
 }
 
+
+/* Message page: https://www.bootdey.com/snippets/view/white-chat#html */
 body{margin-top:20px;}
 
 .chat-online {
