--- a/css-folders/product.css
+++ b/css-folders/product.css
@@ -267,6 +267,8 @@ nav ul li a:hover {
     left: 0;
 }
 
+
+/* Product page: https://designmodo.com/create-product-page/ */
 /* Basic Styling */
 html, body {
     height: 100%;
