--- a/css-folders/wishlist.css
+++ b/css-folders/wishlist.css
@@ -272,6 +272,8 @@ nav ul li a:hover {
     left: 0;
 }
 
+
+/* Wishlist page : https://bootsnipp.com/snippets/ElXol */
 .cart-wrap {
     min-height: 100vh;
 	padding: 40px 0;
