--- a/css-folders/style.css
+++ b/css-folders/style.css
@@ -286,6 +286,8 @@ nav ul li a:hover {
     left: 0;
 }
 
+
+/* Home page For you product list: https://mdbootstrap.com/snippets/standard/mdbootstrap/4852149?view=project#! */
 /* categories and for you */
 .content-grid {
     margin-top: 2rem;
